--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,6 +8,7 @@ const navLinks = [
   { href: '/', label: 'Home' },
   { href: '/blog/', label: 'Blog' },
   { href: '/beauty-index/', label: 'Beauty Index' },
+  { href: '/db-compass/', label: 'DB Compass' },
   { href: '/tools/', label: 'Tools' },
   { href: '/projects/', label: 'Projects' },
   { href: '/about/', label: 'About' },
